# CertStickerHandler

./: CMakeLists.txt  Jak używać.txt  README.md
Entertainment/: CMakeLists.txt  Entertainment.vcxproj  Entertainment.vcxproj.filters
Entertainment/inc/: Entertainment.hpp
Entertainment/src/: Entertainment.cpp  Entertainment.h
FilesManagment/: CMakeLists.txt
FilesManagment/fml/: FilesManagment.tpp
FilesManagment/inc/: FilesManagment.hpp
FilesManagment/src/: FMtemplates.h  FilesManagment.cpp  FilesManagment.h
Headers/Common/: BasicTypes.h  Common.h  Exception.h  Iterator.h  Matrix2D.h  UString.h
Headers/FDF/: FDFDoc.h  FDFField.h
Headers/Filters/: ASCII85Encode.h  Filter.h  FilterReader.h  FilterWriter.h  FlateEncode.h  MemoryFilter.h
Headers/Impl/: Convert.inl  DigitalSignatureField.inl  PDFDoc.inl  PDFNet.inl  PDFView.inl  Page.inl  SignatureHandler.inl  TextExtractor.inl  TrustVerificationResult.inl  VerificationOptions.inl  VerificationResult.inl
Headers/PDF/: Action.h  Annot.h  Annots.h  Bookmark.h  CharData.h  ColorSpace.h  Convert.h  Date.h  Destination.h  DigitalSignatureField.h  Element.h  ElementBuilder.h  ElementReader.h  ElementWriter.h  Field.h  FileSpec.h  Flattener.h  Font.h  Function.h  GState.h  Highlights.h  Image.h  Optimizer.h  PDFDC.h  PDFDCEX.h  PDFDoc.h  PDFDocInfo.h  PDFDocViewPrefs.h  PDFDraw.h  PDFNet.h  PDFRasterizer.h  PDFView.h  Page.h  (+11 more)
Lib/: libinfo.txt
PDF/: CMakeLists.txt  LicenseKey.h
StickerMaker/: StickerMaker.sln  StickerMaker.vcxproj
StringManagment/: CMakeLists.txt
firmware/: CMakeLists.txt  StickerMaker.cpp
(+116 files in other folders)
